--- a/sentinel.conf
+++ b/sentinel.conf
@@ -1,6 +1,6 @@
-# specify path to omegacoin.conf or leave blank
-# default is the same as OmegaCoinCore
-#omegacoin_conf=/home/username/.omegacoincore/omegacoin.conf
+# specify path to exilium.conf or leave blank
+# default is the same as exiliumCoinCore
+#exilium_conf=/home/username/.exilium/exilium.conf
 
 # valid options are mainnet, testnet (default=mainnet)
 network=mainnet
